Briefly demonstrate python client

--- a/taxi-use-case.ipynb
+++ b/taxi-use-case.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Pilosa for transportation data\n",
     "This notebook demonstrates the use of Pilosa for analyzing taxi ride data, in the tradition of these guys:\n",
@@ -26,7 +29,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Dataset and Pilosa schema\n",
     "We're working with the csv files listed here: http://www.nyc.gov/html/tlc/html/about/trip_record_data.shtml. These have about 20 columns; about half of them are relevant for the benchmark queries we're looking at: cab type, distance, fare, number of passengers, dropoff and pickup time and location. We imported these fields, creating one or more Pilosa frames from each of them: \n",
@@ -68,16 +74,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -85,43 +96,75 @@
     "import requests\n",
     "from itertools import product\n",
     "import pandas as pd\n",
+    "from pilosa import Client, TopN, Count, Intersect, Bitmap\n",
     "\n",
-    "pilosa_hosts = ['http://localhost:15000']\n",
     "db = 'taxi10'\n",
-    "qurl = '%s/query?db=%s' % (pilosa_hosts[0], db)"
+    "host = 'localhost:15000'\n",
+    "\n",
+    "qurl = 'http://%s/query?db=%s' % (host, db)\n",
+    "client = Client([host])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One common action is getting the total number of columns preset in the database. We'll use this to demonstrate a few different ways of talking to the server."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1204143\n",
       "1204143\n"
      ]
     }
    ],
    "source": [
-    "def get_profile_count():\n",
-    "    # TODO get from schema\n",
-    "    q = 'TopN(frame=cab_type.n)'\n",
-    "    resp = requests.post(qurl, data=qs)\n",
+    "def get_ride_count():\n",
+    "    # briefly demonstrate querying pilosa with \"raw http\"\n",
+    "    resp = requests.post(qurl, data='TopN(frame=cab_type.n)')\n",
     "    data = json.loads(resp.content)['results'][0]\n",
     "    counts = [r['count'] for r in data]\n",
     "    return sum(counts)\n",
     "\n",
-    "# make sure this works as expected\n",
-    "print(get_profile_count())"
+    "def get_ride_count_client():\n",
+    "    # briefly demonstrate querying pilosa with the python client\n",
+    "    resp = client.query(db, TopN(None, frame='cab_type.n'))\n",
+    "    data = resp.results[0].value()\n",
+    "    counts = [r['count'] for r in data]\n",
+    "    return sum(counts)\n",
+    "\n",
+    "def get_ride_count_schema():\n",
+    "    # NOTE: as of 2017/03, the schema endpoint does not support the db parameter, \n",
+    "    # nor is 'total_columns' included in the response. Some form of this should\n",
+    "    # work after some schema updates are completed.\n",
+    "    qurl = 'http://%s/schema?db=%d' % (host, db)\n",
+    "    resp = requests.get(qurl)\n",
+    "    return resp['total_columns']\n",
+    "\n",
+    "\n",
+    "# try these out\n",
+    "print(get_ride_count())\n",
+    "print(get_ride_count_client())"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now  let's try to query the database, using the four benchmarks described by Mark (http://tech.marksblogg.com/billion-nyc-taxi-rides-bigquery.html) for inspiration.\n",
     "\n",
@@ -143,7 +186,9 @@
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -175,7 +220,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Query 2: average(total_amount) per passenger_count\n",
     "\n",
@@ -208,7 +256,9 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -269,7 +319,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Query 3: count per (passenger_count, year)\n",
     "\n",
@@ -294,7 +347,9 @@
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -347,7 +402,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Query 4: count per (passenger_count, year, round(trip_distance)) ordered by (year, count)\n",
     "\n",
@@ -381,7 +439,9 @@
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -474,7 +534,7 @@
     "# iterate over candidates in order of estimated largest\n",
     "n = 0\n",
     "total = 0\n",
-    "num_profiles = get_profile_count()\n",
+    "num_rides = get_ride_count()\n",
     "years, pcounts, dists, counts = [], [], [], []\n",
     "for year, pcount, dist, maxcount in cands:\n",
     "    bmps = [\n",
@@ -492,7 +552,7 @@
     "    dists.append(dist)\n",
     "    counts.append(count)\n",
     "\n",
-    "    pct = (100.*total)/num_profiles\n",
+    "    pct = (100.*total)/num_rides\n",
     "    if verbose:\n",
     "        print('%d. %.2f%% (max %.2f%%)' % (n, pct, pct_thresh))\n",
     "    if pct >= pct_thresh:\n",
