Minor copy updates

--- a/taxi-use-case.ipynb
+++ b/taxi-use-case.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "This is just one example of a schema definition we can use to answer some interesting queries with Pilosa. In other cases, we might prefer different mappings to Pilosa bitmaps. Other examples include:\n",
     "\n",
-    "* Mapping numeric values to custom bins instead of rounding (regularly spaced bins).\n",
+    "* Mapping numeric values to custom bins instead of rounding (which produces regularly spaced bins).\n",
     "* Mapping timestamps to bins spanning the full range of times represented in the data, instead of using multiple frames for the timestamp components.\n",
     "* Using Pilosa's built-in support for timestamps.\n",
     "* Mapping (latitude, longitude) to real-world regions, such as NYC boroughs or neighborhoods.\n",
@@ -107,9 +107,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "One common action is getting the total number of columns preset in the database. We'll use this to demonstrate a few different ways of talking to the server."
+    "One common action is getting the total number of columns present in the database. We'll use this to demonstrate a few different ways of talking to the server."
    ]
   },
   {
@@ -216,6 +219,13 @@
     "})\n",
     "print(df.to_string(index=False))\n",
     "print('query: %f sec' % (t1-t0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It took 11 lines to generate this result table, but the query is accomplished with only two or three lines."
    ]
   },
   {
@@ -409,7 +419,9 @@
    "source": [
     "## Query 4: count per (passenger_count, year, round(trip_distance)) ordered by (year, count)\n",
     "\n",
-    "This query is the least straightforward of the four. To produce the full result table, we could iterate over the full product of all bitmaps in the three frames (passenger_count, year, distance), and send a `Count(Intersect())` query for each one - but this would be slow, and would only get worse if these frames were growing. A slightly smarter alternative is to make a quick guess at the size of these intersections, then query for the counts in that order. We then have the option to quit early, after a set number of result rows have been produced, or a set percentage of database rows have been accounted for (this latter approach is used here, controlled with the `pct_thresh` parameter).\n",
+    "This query is the least appropriate for the Pilosa model - but that doesn't mean it can't be done. TODO: what's the right way to make this point?\n",
+    "\n",
+    "To produce the full result table, we could iterate over the full product of all bitmaps in the three frames (passenger_count, year, distance), and send a `Count(Intersect())` query for each one - but this would be slow, and would only get worse if these frames were growing. A slightly smarter alternative is to make a quick guess at the size of these intersections, then query for the counts in that order. We then have the option to quit early, after a set number of result rows have been produced, or a set percentage of database rows have been accounted for (this latter approach is used here, controlled with the `pct_thresh` parameter).\n",
     "\n",
     "We can get the \"quick guess\" by sending TopN queries for each of the three frames, then combining the results, estimating the maximum possible size of the intersection as the minimum count of the three rows. We then sort this list on the size guess, and check the actual size in descending order. \n",
     "\n",
