Update links and todos

--- a/taxi-use-case.ipynb
+++ b/taxi-use-case.ipynb
@@ -12,19 +12,22 @@
     "- http://tech.marksblogg.com/benchmarks.html\n",
     "- http://toddwschneider.com/posts/analyzing-1-1-billion-nyc-taxi-and-uber-trips-with-a-vengeance/\n",
     "\n",
-    "To use this, you'll need an instance of Pilosa with a database populated according to the schema defined here: https://github.com/jaffee/pdk/blob/taxi-import/usecase/taxi/main.go\n",
+    "To use this, you'll need an instance of Pilosa with a database populated according to the schema defined here: https://github.com/pilosa/pdk/blob/master/usecase/taxi/main.go\n",
     "\n",
     "* To get Pilosa up and running, follow the instructions at https://github.com/pilosa/pilosa#getting-started\n",
-    "* To import data yourself, follow the instructions at https://github.com/pilosa/pdk/tree/usecase/taxi # TODO use correct url when jaffee's branch is merged\n",
+    "* To import data yourself, follow the instructions at https://github.com/pilosa/pdk/tree/usecase/taxi\n",
     "* To use a small sample database, unzip TODO into ~/.pilosa\n",
     "\n",
     "TODO:\n",
     "* verify results\n",
+    "* use python client\n",
     "* for queries 2 and 4, describe time complexity, and/or run timing benchmarks on multiple sizes of taxi databases\n",
+    "* other TODO tags lower down in this document\n",
+    "\n",
+    "FUTURE:\n",
     "* generate sample results with a new db with more diverse data (>1 cab type, >1 year)\n",
     "* update terminology to match rowLabel and columnLabel, after new db is created with these\n",
-    "* use frame schema instead of hardcoded stuff\n",
-    "* use python client\n"
+    "* use frame schema instead of hardcoded stuff"
    ]
   },
   {
