update help url

--- a/taxi-use-case.ipynb
+++ b/taxi-use-case.ipynb
@@ -15,7 +15,7 @@
     "To use this, you'll need an instance of Pilosa with a database populated according to the schema defined here: https://github.com/pilosa/pdk/blob/master/usecase/taxi/main.go\n",
     "\n",
     "* To get Pilosa up and running, follow the instructions at https://github.com/pilosa/pilosa#getting-started\n",
-    "* To import data yourself, follow the instructions at https://github.com/pilosa/pdk/tree/usecase/taxi\n",
+    "* To import data yourself, follow the instructions for the taxi usecase at https://github.com/pilosa/pdk#taxi-usecase\n",
     "* To use a small sample database, unzip TODO into ~/.pilosa\n",
     "\n",
     "TODO:\n",
@@ -226,7 +226,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "It took 11 lines to generate this result table, but the query is accomplished with only two or three lines."
    ]
