Update terminology, frame names, urls, copy

--- a/taxi-use-case.ipynb
+++ b/taxi-use-case.ipynb
@@ -12,22 +12,11 @@
     "- http://tech.marksblogg.com/benchmarks.html\n",
     "- http://toddwschneider.com/posts/analyzing-1-1-billion-nyc-taxi-and-uber-trips-with-a-vengeance/\n",
     "\n",
-    "To use this, you'll need an instance of Pilosa with a database populated according to the schema defined here: https://github.com/pilosa/pdk/blob/master/usecase/taxi/main.go\n",
+    "To use this, you'll need an instance of Pilosa with an index populated according to the schema defined here: https://github.com/pilosa/pdk/blob/master/usecase/taxi/main.go\n",
     "\n",
-    "* To get Pilosa up and running, follow the instructions at https://github.com/pilosa/pilosa#getting-started\n",
-    "* To import data yourself, follow the instructions for the taxi usecase at https://github.com/pilosa/pdk#taxi-usecase\n",
-    "* To use a small sample database, unzip TODO into ~/.pilosa\n",
-    "\n",
-    "TODO:\n",
-    "* verify results\n",
-    "* use python client\n",
-    "* for queries 2 and 4, describe time complexity, and/or run timing benchmarks on multiple sizes of taxi databases\n",
-    "* other TODO tags lower down in this document\n",
-    "\n",
-    "FUTURE:\n",
-    "* generate sample results with a new db with more diverse data (>1 cab type, >1 year)\n",
-    "* update terminology to match rowLabel and columnLabel, after new db is created with these\n",
-    "* use frame schema instead of hardcoded stuff"
+    "* Install Pilosa: https://www.pilosa.com/docs/installation/\n",
+    "* Getting started: https://www.pilosa.com/docs/getting-started/\n",
+    "* To import data yourself, follow the instructions for the taxi usecase at https://github.com/pilosa/pdk#taxi-usecase\n"
    ]
   },
   {
@@ -63,8 +52,6 @@
     "| ----- | ------- |\n",
     "|duration_minutes| round(drop_timestamp - pickup_timestamp) -> row ID |\n",
     "|speed_mph| round(dist_miles / (drop_timestamp - pickup_timestamp)) -> row ID|\n",
-    "\n",
-    "You might notice frames named with a \".n\" suffix, like \"cab_type.n\". This is used to mark a frame as a \"ranked\" type, to support Pilosa's `TopN` query.\n",
     "\n",
     "This is just one example of a schema definition we can use to answer some interesting queries with Pilosa. In other cases, we might prefer different mappings to Pilosa bitmaps. Other examples include:\n",
     "\n",
@@ -115,7 +102,7 @@
     "editable": true
    },
    "source": [
-    "One common action is getting the total number of columns present in the database. We'll use this to demonstrate a few different ways of talking to the server."
+    "One common action is getting the total number of columns present in the index. We'll use this to demonstrate a few different ways of talking to the server."
    ]
   },
   {
@@ -139,14 +126,14 @@
    "source": [
     "def get_ride_count():\n",
     "    # briefly demonstrate querying pilosa with \"raw http\"\n",
-    "    resp = requests.post(qurl, data='TopN(frame=cab_type.n)')\n",
+    "    resp = requests.post(qurl, data='TopN(frame=cab_type)')\n",
     "    data = json.loads(resp.content)['results'][0]\n",
     "    counts = [r['count'] for r in data]\n",
     "    return sum(counts)\n",
     "\n",
     "def get_ride_count_client():\n",
     "    # briefly demonstrate querying pilosa with the python client\n",
-    "    resp = client.query(db, TopN(None, frame='cab_type.n'))\n",
+    "    resp = client.query(db, TopN(None, frame='cab_type'))\n",
     "    data = resp.results[0].value()\n",
     "    counts = [r['count'] for r in data]\n",
     "    return sum(counts)\n",
@@ -172,7 +159,7 @@
     "editable": true
    },
    "source": [
-    "Now  let's try to query the database, using the four benchmarks described by Mark (http://tech.marksblogg.com/billion-nyc-taxi-rides-bigquery.html) for inspiration.\n",
+    "Now  let's try to query the index, using the four benchmarks described by Mark (http://tech.marksblogg.com/billion-nyc-taxi-rides-bigquery.html) for inspiration.\n",
     "\n",
     "---\n",
     "\n",
@@ -210,7 +197,7 @@
    "source": [
     "# Build and post query\n",
     "t0 = time.time()\n",
-    "q = 'TopN(frame=cab_type.n)'\n",
+    "q = 'TopN(frame=cab_type)'\n",
     "resp = requests.post(qurl, data=q)\n",
     "t1 = time.time()\n",
     "\n",
@@ -231,7 +218,7 @@
     "editable": true
    },
    "source": [
-    "It took 11 lines to generate this result table, but the query is accomplished with only two or three lines."
+    "It took 11 lines of python to generate this result table, but the query is accomplished with only two or three lines."
    ]
   },
   {
@@ -247,7 +234,7 @@
     "\n",
     "We send one of these TopN queries for each row in the passenger_count frame, intersecting with the total_amount_dollars frame. We then compute one average(total_amount) from each of these queries. The denominator is the sum of `count` values. The numerator is the sum of `count` values, weighted by the corresponding total_amount value, which is approximately equal to the row ID (`key` in the result). This works because of our schema which maps fare values to row IDs by rounding to the nearest integer. \n",
     "\n",
-    "Note: this calculation is approximate. TODO verify approximation is reasonable, justify\n",
+    "Note: this calculation is approximate.\n",
     "\n",
     "Pilosa also supports storage of scalar attributes per row or column; exact fare value can be stored this way. One feature on the Pilosa roadmap is to support aggregation over these attributes. When this is available, the averages in this query can be calculated internally.\n",
     "\n",
@@ -301,9 +288,9 @@
     "# Build and post query\n",
     "t0 = time.time()\n",
     "qs = ''\n",
-    "pcounts = range(10) # TODO get from schema\n",
+    "pcounts = range(10)\n",
     "for i in pcounts:\n",
-    "    qs += \"TopN(Bitmap(id=%d, frame='passenger_count.n'), frame=total_amount_dollars.n)\" % i\n",
+    "    qs += \"TopN(Bitmap(id=%d, frame='passenger_count'), frame=total_amount_dollars)\" % i\n",
     "resp = requests.post(qurl, data=qs)\n",
     "t1 = time.time()\n",
     "\n",
@@ -390,13 +377,13 @@
     "# build and execute query\n",
     "t0 = time.time()\n",
     "qs = ''\n",
-    "years = range(2009, 2016)  # TODO get from schema\n",
+    "years = range(2009, 2016)\n",
     "pcounts = range(1, 10)\n",
     "\n",
     "for year, pcount in product(years, pcounts):\n",
     "    bmps = [\n",
-    "        \"Bitmap(id=%d, frame='pickup_year.n')\" % year,\n",
-    "        \"Bitmap(id=%d, frame='passenger_count.n')\" % pcount,\n",
+    "        \"Bitmap(id=%d, frame='pickup_year')\" % year,\n",
+    "        \"Bitmap(id=%d, frame='passenger_count')\" % pcount,\n",
     "    ]\n",
     "    qs += \"Count(Intersect(%s))\" % ', '.join(bmps)\n",
     "\n",
@@ -425,13 +412,11 @@
    "source": [
     "## Query 4: count per (passenger_count, year, round(trip_distance)) ordered by (year, count)\n",
     "\n",
-    "This query is the least appropriate for the Pilosa model - but that doesn't mean it can't be done. TODO: what's the right way to make this point?\n",
-    "\n",
-    "To produce the full result table, we could iterate over the full product of all bitmaps in the three frames (passenger_count, year, distance), and send a `Count(Intersect())` query for each one - but this would be slow, and would only get worse if these frames were growing. A slightly smarter alternative is to make a quick guess at the size of these intersections, then query for the counts in that order. We then have the option to quit early, after a set number of result rows have been produced, or a set percentage of database rows have been accounted for (this latter approach is used here, controlled with the `pct_thresh` parameter).\n",
+    "To produce the full result table, we could iterate over the full product of all bitmaps in the three frames (passenger_count, year, distance), and send a `Count(Intersect())` query for each one - but this would be slow, and would only get worse if these frames were growing. A slightly smarter alternative is to make a quick guess at the size of these intersections, then query for the counts in that order. We then have the option to quit early, after a set number of result rows have been produced, or a set percentage of index rows have been accounted for (this latter approach is used here, controlled with the `pct_thresh` parameter).\n",
     "\n",
     "We can get the \"quick guess\" by sending TopN queries for each of the three frames, then combining the results, estimating the maximum possible size of the intersection as the minimum count of the three rows. We then sort this list on the size guess, and check the actual size in descending order. \n",
     "\n",
-    "Generating the full result in this way is somewhat slow, but getting the top few rows is quick. The implementation here also sends the second group of requests serially, for simplicity - batching or parallelizing these would improve efficiency. TODO verify this\n",
+    "Generating the full result in this way is somewhat slow, but getting the top few rows is quick. The implementation here also sends the second group of requests serially, for simplicity - batching or parallelizing these would improve efficiency. \n",
     "\n",
     "This should produce a result like the following:\n",
     "\n",
@@ -523,13 +508,13 @@
     "\n",
     "# build and post preliminary queries\n",
     "t0 = time.time()\n",
-    "years = range(2009, 2016)  # TODO get from schema\n",
+    "years = range(2009, 2016)\n",
     "pcounts = range(1, 9)\n",
     "dists = range(50)\n",
     "topns = [\n",
-    "    \"TopN(frame='pickup_year.n')\"\n",
-    "    \"TopN(frame='passenger_count.n')\"\n",
-    "    \"TopN(frame='dist_miles.n')\"\n",
+    "    \"TopN(frame='pickup_year')\"\n",
+    "    \"TopN(frame='passenger_count')\"\n",
+    "    \"TopN(frame='dist_miles')\"\n",
     "]\n",
     "qs = ', '.join(topns)\n",
     "resp = requests.post(qurl, data=qs)\n",
@@ -556,9 +541,9 @@
     "years, pcounts, dists, counts = [], [], [], []\n",
     "for year, pcount, dist, maxcount in cands:\n",
     "    bmps = [\n",
-    "        \"Bitmap(id=%d, frame='pickup_year.n')\" % year,\n",
-    "        \"Bitmap(id=%d, frame='passenger_count.n')\" % pcount,\n",
-    "        \"Bitmap(id=%d, frame='dist_miles.n')\" % dist,\n",
+    "        \"Bitmap(id=%d, frame='pickup_year')\" % year,\n",
+    "        \"Bitmap(id=%d, frame='passenger_count')\" % pcount,\n",
+    "        \"Bitmap(id=%d, frame='dist_miles')\" % dist,\n",
     "    ]\n",
     "    q = \"Count(Intersect(%s))\" % ', '.join(bmps)\n",
     "    resp = requests.post(qurl, data=q)\n",
@@ -611,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
