Update client usage and query urls

--- a/taxi-use-case.ipynb
+++ b/taxi-use-case.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -86,13 +86,14 @@
     "import requests\n",
     "from itertools import product\n",
     "import pandas as pd\n",
-    "from pilosa import Client, TopN, Count, Intersect, Bitmap\n",
+    "import pilosa\n",
     "\n",
-    "db = 'taxi10'\n",
-    "host = 'localhost:15000'\n",
+    "index = 'taxi10'\n",
+    "host = 'localhost:10101'\n",
     "\n",
-    "qurl = 'http://%s/query?db=%s' % (host, db)\n",
-    "client = Client([host])"
+    "qurl = 'http://%s/index/%s/query' % (host, index)\n",
+    "client = pilosa.Client(host)\n",
+    "pindex = pilosa.Index(index)"
    ]
   },
   {
@@ -133,19 +134,11 @@
     "\n",
     "def get_ride_count_client():\n",
     "    # briefly demonstrate querying pilosa with the python client\n",
-    "    resp = client.query(db, TopN(None, frame='cab_type'))\n",
-    "    data = resp.results[0].value()\n",
-    "    counts = [r['count'] for r in data]\n",
+    "    pframe = pindex.frame('cab_type')\n",
+    "    resp = client.query(pframe.topn(0))\n",
+    "    data = resp.result.count_items\n",
+    "    counts = [r.count for r in data]\n",
     "    return sum(counts)\n",
-    "\n",
-    "def get_ride_count_schema():\n",
-    "    # NOTE: as of 2017/03, the schema endpoint does not support the db parameter, \n",
-    "    # nor is 'total_columns' included in the response. Some form of this should\n",
-    "    # work after some schema updates are completed.\n",
-    "    qurl = 'http://%s/schema?db=%d' % (host, db)\n",
-    "    resp = requests.get(qurl)\n",
-    "    return resp['total_columns']\n",
-    "\n",
     "\n",
     "# try these out\n",
     "print(get_ride_count())\n",
