Update variables to match new response format

--- a/taxi-use-case.ipynb
+++ b/taxi-use-case.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "* Install Pilosa: https://www.pilosa.com/docs/installation/\n",
     "* Getting started: https://www.pilosa.com/docs/getting-started/\n",
-    "* To import data yourself, follow the instructions for the taxi usecase at https://github.com/pilosa/pdk#taxi-usecase\n"
+    "* To import data yourself, follow the instructions for the taxi usecase at https://github.com/pilosa/pdk\n"
    ]
   },
   {
@@ -88,7 +88,7 @@
     "import pandas as pd\n",
     "import pilosa\n",
     "\n",
-    "index = 'taxi10'\n",
+    "index = 'taxi'\n",
     "host = 'localhost:10101'\n",
     "\n",
     "qurl = 'http://%s/index/%s/query' % (host, index)\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -119,8 +119,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1204143\n",
-      "1204143\n"
+      "224809\n",
+      "224809\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -181,9 +181,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cab_type    count\n",
-      "       0  1204143\n",
-      "query: 0.005403 sec\n"
+      "cab_type   count\n",
+      "       0  224809\n",
+      "query: 0.007023 sec\n"
      ]
     }
    ],
@@ -198,7 +198,7 @@
     "res = resp.json()['results'][0]\n",
     "df = pd.DataFrame({\n",
     "    'count': [d['count'] for d in res],\n",
-    "    'cab_type': [d['key'] for d in res],\n",
+    "    'cab_type': [d['id'] for d in res],\n",
     "})\n",
     "print(df.to_string(index=False))\n",
     "print('query: %f sec' % (t1-t0))"
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -262,18 +262,18 @@
      "output_type": "stream",
      "text": [
       "average_amount  passenger_count\n",
-      "      6.266355                0\n",
-      "     14.318400                1\n",
-      "     14.826454                2\n",
-      "     14.830131                3\n",
-      "     15.197937                4\n",
-      "     14.529424                5\n",
-      "     15.251607                6\n",
-      "     17.000000                7\n",
-      "      9.888889                8\n",
-      "     19.470588                9\n",
-      "query: 1.936771 sec\n",
-      "postprocess: 0.002440 sec\n"
+      "      6.666667                0\n",
+      "     14.735619                1\n",
+      "     15.044188                2\n",
+      "     15.244204                3\n",
+      "     16.557385                4\n",
+      "     14.899677                5\n",
+      "     15.535072                6\n",
+      "      7.250000                7\n",
+      "      9.000000                8\n",
+      "     37.000000                9\n",
+      "query: 0.364508 sec\n",
+      "postprocess: 0.001544 sec\n"
      ]
     }
    ],
@@ -283,7 +283,7 @@
     "qs = ''\n",
     "pcounts = range(10)\n",
     "for i in pcounts:\n",
-    "    qs += \"TopN(Bitmap(id=%d, frame='passenger_count'), frame=total_amount_dollars)\" % i\n",
+    "    qs += \"TopN(Bitmap(rowID=%d, frame='passenger_count'), frame=total_amount_dollars)\" % i\n",
     "resp = requests.post(qurl, data=qs)\n",
     "t1 = time.time()\n",
     "\n",
@@ -297,7 +297,7 @@
     "    # combination. Thanks to our schema, which maps these decimal fare \n",
     "    # values to integer-valued bitmap IDs by simple rounding, we can use \n",
     "    # the key itself as the value or weight in the average calculation. \n",
-    "    wsum = sum([r['count'] * r['key'] for r in topn])\n",
+    "    wsum = sum([r['count'] * r['id'] for r in topn])\n",
     "    count = sum([r['count'] for r in topn])\n",
     "    average_amounts.append(float(wsum)/count)\n",
     "t2 = time.time()\n",
@@ -305,7 +305,7 @@
     "# Display results\n",
     "df = pd.DataFrame({\n",
     "    'passenger_count': pcounts,\n",
-    "    'average_amount': average_amount,\n",
+    "    'average_amount': average_amounts,\n",
     "})\n",
     "df = df.reset_index(drop=True)\n",
     "print(df.to_string(index=False))\n",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -353,16 +353,16 @@
      "output_type": "stream",
      "text": [
       "Count  passenger_count  year\n",
-      "953470                1  2013\n",
-      " 92598                2  2013\n",
-      " 27533                3  2013\n",
-      " 11246                4  2013\n",
-      "104491                5  2013\n",
-      " 14312                6  2013\n",
-      "    30                7  2013\n",
-      "    18                8  2013\n",
-      "    17                9  2013\n",
-      "query: 0.153811 sec\n"
+      "166309                1  2013\n",
+      " 18557                2  2013\n",
+      "  5823                3  2013\n",
+      "  1943                4  2013\n",
+      " 29395                5  2013\n",
+      "  2723                6  2013\n",
+      "     4                7  2013\n",
+      "     1                8  2013\n",
+      "     3                9  2013\n",
+      "query: 0.045291 sec\n"
      ]
     }
    ],
@@ -375,8 +375,8 @@
     "\n",
     "for year, pcount in product(years, pcounts):\n",
     "    bmps = [\n",
-    "        \"Bitmap(id=%d, frame='pickup_year')\" % year,\n",
-    "        \"Bitmap(id=%d, frame='passenger_count')\" % pcount,\n",
+    "        \"Bitmap(rowID=%d, frame='pickup_year')\" % year,\n",
+    "        \"Bitmap(rowID=%d, frame='passenger_count')\" % pcount,\n",
     "    ]\n",
     "    qs += \"Count(Intersect(%s))\" % ', '.join(bmps)\n",
     "\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -445,53 +445,59 @@
      "output_type": "stream",
      "text": [
       "Count  distance  passenger_count  year\n",
-      "303011         1                1  2013\n",
-      "202342         2                1  2013\n",
-      "119368         3                1  2013\n",
-      " 77763         4                1  2013\n",
-      " 62200         0                1  2013\n",
-      " 51421         5                1  2013\n",
-      " 38373         6                1  2013\n",
-      " 33828         1                5  2013\n",
-      " 29333         7                1  2013\n",
-      " 26969         1                2  2013\n",
-      " 22233         2                5  2013\n",
-      " 21048         8                1  2013\n",
-      " 19067         2                2  2013\n",
-      " 13629         9                1  2013\n",
-      " 13045         3                5  2013\n",
-      " 11907         3                2  2013\n",
-      "  8166         4                5  2013\n",
-      "  8050         4                2  2013\n",
-      "  7774         1                3  2013\n",
-      "  6723         0                2  2013\n",
-      "  6110         0                5  2013\n",
-      "  6094         2                3  2013\n",
-      "  5798         5                5  2013\n",
-      "  5487         5                2  2013\n",
-      "  4405         1                6  2013\n",
-      "  4365         6                5  2013\n",
-      "  4067         6                2  2013\n",
-      "  3683         3                3  2013\n",
-      "  3254         7                5  2013\n",
-      "  2932         7                2  2013\n",
-      "  2804         2                6  2013\n",
-      "  2446         4                3  2013\n",
-      "  2345         8                5  2013\n",
-      "  2048         8                2  2013\n",
-      "  1924         3                6  2013\n",
-      "  1622         5                3  2013\n",
-      "  1618         0                3  2013\n",
-      "  1491         9                5  2013\n",
-      "  1373         9                2  2013\n",
-      "  1337         4                6  2013\n",
-      "  1201         6                3  2013\n",
-      "   944         7                3  2013\n",
-      "   640         8                3  2013\n",
-      "   427         9                3  2013\n",
-      "fast query: 0.005938 sec\n",
-      "slow query (43): 1.549860 sec\n",
-      "postprocess: 0.004469 sec\n"
+      "47971         1                1  2013\n",
+      "34382         2                1  2013\n",
+      "20818         3                1  2013\n",
+      "14176         0                1  2013\n",
+      "13775         4                1  2013\n",
+      " 9411         5                1  2013\n",
+      " 8976         1                5  2013\n",
+      " 6922         6                1  2013\n",
+      " 6230         2                5  2013\n",
+      " 5470         7                1  2013\n",
+      " 4900         1                2  2013\n",
+      " 3966         8                1  2013\n",
+      " 3752         3                5  2013\n",
+      " 3675         2                2  2013\n",
+      " 2650         9                1  2013\n",
+      " 2363         4                5  2013\n",
+      " 2307         3                2  2013\n",
+      " 2014         0                2  2013\n",
+      " 1727         0                5  2013\n",
+      " 1667         5                5  2013\n",
+      " 1581         4                2  2013\n",
+      " 1539         1                3  2013\n",
+      " 1290         6                5  2013\n",
+      " 1278         2                3  2013\n",
+      " 1034         5                2  2013\n",
+      " 1006         7                5  2013\n",
+      "  841         6                2  2013\n",
+      "  796         1                6  2013\n",
+      "  751         3                3  2013\n",
+      "  716         8                5  2013\n",
+      "  569         7                2  2013\n",
+      "  525         0                3  2013\n",
+      "  520         2                6  2013\n",
+      "  490         9                5  2013\n",
+      "  455         4                3  2013\n",
+      "  402         8                2  2013\n",
+      "  376         3                6  2013\n",
+      "  330         5                3  2013\n",
+      "  312         9                2  2013\n",
+      "  276         6                3  2013\n",
+      "  245         4                6  2013\n",
+      "  197         7                3  2013\n",
+      "  187         5                6  2013\n",
+      "  183         0                6  2013\n",
+      "  149         8                3  2013\n",
+      "  110         6                6  2013\n",
+      "   84         9                3  2013\n",
+      "   75         7                6  2013\n",
+      "   69         8                6  2013\n",
+      "   50         9                6  2013\n",
+      "fast query: 0.005385 sec\n",
+      "slow query (49): 0.478308 sec\n",
+      "postprocess: 0.005201 sec\n"
      ]
     }
    ],
@@ -515,9 +521,9 @@
     "t1 = time.time()\n",
     "\n",
     "# assemble TopN results into candidates\n",
-    "year_data = [(x['key'], x['count']) for x in res[0]]\n",
-    "pcount_data = [(x['key'], x['count']) for x in res[1]]\n",
-    "dist_data = [(x['key'], x['count']) for x in res[2]]\n",
+    "year_data = [(x['id'], x['count']) for x in res[0]]\n",
+    "pcount_data = [(x['id'], x['count']) for x in res[1]]\n",
+    "dist_data = [(x['id'], x['count']) for x in res[2]]\n",
     "\n",
     "cands = []\n",
     "for (k_year, c_year), (k_pcount, c_pcount), (k_dist, c_dist) in product(year_data, pcount_data, dist_data):\n",
@@ -534,9 +540,9 @@
     "years, pcounts, dists, counts = [], [], [], []\n",
     "for year, pcount, dist, maxcount in cands:\n",
     "    bmps = [\n",
-    "        \"Bitmap(id=%d, frame='pickup_year')\" % year,\n",
-    "        \"Bitmap(id=%d, frame='passenger_count')\" % pcount,\n",
-    "        \"Bitmap(id=%d, frame='dist_miles')\" % dist,\n",
+    "        \"Bitmap(rowID=%d, frame='pickup_year')\" % year,\n",
+    "        \"Bitmap(rowID=%d, frame='passenger_count')\" % pcount,\n",
+    "        \"Bitmap(rowID=%d, frame='dist_miles')\" % dist,\n",
     "    ]\n",
     "    q = \"Count(Intersect(%s))\" % ', '.join(bmps)\n",
     "    resp = requests.post(qurl, data=q)\n",
