Add missing json import

--- a/taxi-use-case.ipynb
+++ b/taxi-use-case.ipynb
@@ -83,6 +83,7 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "import json\n",
     "import requests\n",
     "from itertools import product\n",
     "import pandas as pd\n",
